kube-manifests/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: lgwm-image
        image: sahu123/nginx-app:#{Build.BuildId}#
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blue-green-service
spec:
  type: ClusterIP
  selector:
    app: blue
  ports:
  - port: 80
    targetPort: 8080
